--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palindrome Finder with Visualization</title>
+    <title>Palindrome Finder - Visualization</title>
     <style>
         body, html {
             font-family: Arial, sans-serif;
@@ -30,10 +30,10 @@
         }
 
         canvas {
-            border: 1px solid #ddd; /* Add a border to the canvas */
-            background-color: #fff; /* Optional: set a background color */
+            border: 1px solid #ddd; 
+            background-color: #fff; 
             display: block;
-            margin: 20px auto; /* Center the canvas horizontally */
+            margin: 20px auto; 
         }
 
         #resultBF, #resultDP {
