--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
         .container {
             margin-top: 50px;
-            align: center;
+            max-width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         input[type="text"] {
