--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         function findPalindrome() {
             let inputString = document.getElementById('inputString').value;
             if (!/^[a-zA-Z]+$/.test(inputString)) { // Validates that the input contains only alphabetic characters
-                alert("Only alphabetical string inputs are accepted.");
+                alert("Hanya menerima input berupa string.");
                 return;
             }
             clearCanvas('palindromeCanvasBF');
